# OrbitWars

./: .gitignore  .gitmodules  TODO.md  benchmark.ipynb  cloudflare_worker.js  getting-started.ipynb  howtoplay.md  notes.md  orbit_wars_jax.py  original_orbit_wars_annotated.py  pyproject.toml  requirements-actions.txt  wrangler.toml
.claude/: settings.local.json
.github/workflows/: deploy_ondemand.yml  deploy_worker.yml
core/: networks.py  nnx_pgame.py  orbit_wars_jax.py  rollout_utils.py
docs/: 00_overview.md  01_game_engine.md  02_networks.md  03_td3_emitter.md  04_rollout_utils.md  05_training_pipeline.md  06_scripts.md  07_jax_patterns.md  README.md
docs/.obsidian/: workspace.json
notebooks/: bc_v13_3_training.ipynb  benchmark.ipynb  eval_local.ipynb  jax_playground.ipynb  test.ipynb  training_colab.ipynb  training_colab_tpu.ipynb
old/: convert_to_JAX.ipynb  generate_train_new.py  orbit_wars_jax_copy.py  orbit_wars_sim.py  qd_env.py
old/core/: adapter.py  benchmark.py  benchmark_original.py
orbit_wars_fast/: README.md  __init__.py  benchmark.py  colab_benchmark.ipynb  evosax_qdax_adapter.py  fast_sim.py  jax_core.py  jax_parity_backend.py  orbit_wars_reference_annotated.py  parity_pool.py  reference_adapter.py  rl_adapter.py  test_byte_accuracy.py
public/: index.html
scripts/: bc_train.py  build_submission.sh  eval_v13.py  export_v6_agent.py  generate_site.py  jax_visualizer.py  make_v13_1_checkpoint.py  make_v13_3_checkpoint.py  make_v13_3_warmrestart.py  migrate_r2_compression.py  prune_v6_r2.py  train.py  train_rl.py  verify_behavior.py
(+28 files in other folders)
