[project]
name = "orbitwars"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "awscli>=1.45.17",
    "boto3>=1.43.17",
    "boto3-stubs~=1.43.17",
    "brax==0.14.2",
    "flax>=0.12.7",
    "ipywidgets>=8.1.8",
    "jax>=0.10.0",
    "jaxtyping>=0.3.9",
    "jupyterlab>=4.5.7",
    "kaggle>=2.1.2",
    "kaggle-environments>=1.29.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "qdax==0.5.0",
    "tensorstore>=0.1.83",
]
